--- a/pages/importing-custom-data/basic-data-schema/custom-schema-and-push-api.mdx
+++ b/pages/importing-custom-data/basic-data-schema/custom-schema-and-push-api.mdx
@@ -1,3 +1,4 @@
+import Collapse from '@/components/Collapse'
 
 # Building Simple Data Schema: A Push API and Schema Definition Example
 
@@ -131,8 +132,9 @@ const {
   .exec();
 ```  
 
+<Collapse title="Response">
 ```typescript
-// Response
+
 [
     {
         "description": "Ergonomic wireless mouse with long battery life",
@@ -142,6 +144,7 @@ const {
     }
 ]
 ```
+</Collapse>
 
 ## Learn More
 
